[gd_scene load_steps=3 format=3 uid="uid://b4nwrqrxvgfyh"]

[ext_resource type="Script" path="res://scripts/EventDialog.gd" id="1"]
[ext_resource type="Theme" path="res://themes/SafePlaceTheme.tres" id="2"]

[node name="EventDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
theme = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="RichTextLabel" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 50)
theme = ExtResource("2")
bbcode_enabled = true
text = "[center][color=#00B347]EVENTO NARRATIVO[/color][/center]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")

[node name="DescriptionLabel" type="RichTextLabel" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2")
bbcode_enabled = true
text = "Descrizione dell'evento narrativo..."

[node name="HSeparator2" type="HSeparator" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="CloseButton" type="Button" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2")
text = "CHIUDI" 